hphp/hack/test/typecheck/parent_static.php.exp
File "parent_static.php", line 18, characters 13-14:
Could not find static method f1 in type A (Typing[4090])
File "parent_static.php", line 13, characters 19-20:
The closest thing is f1 but it's not a static method
File "parent_static.php", line 12, characters 7-7:
Declaration of A is here
